fix swagger for query
